# Remotely

./: .gitignore  README.md  meson.build  org.gnome.Remotely.json
data/: meson.build  org.gnome.Remotely.appdata.xml.in  org.gnome.Remotely.desktop.in  org.gnome.Remotely.gresource.xml  org.gnome.Remotely.gschema.xml
data/ui/: vnc-box.ui  window.ui
po/: POTFILES  meson.build
src/: meson.build  remotely-app.vala  remotely-vnc-box.vala  remotely-window.vala
